fix: Word wrapping for links in blockquotes

--- a/src/layouts/index.scss
+++ b/src/layouts/index.scss
@@ -172,6 +172,7 @@ h6, {
     border-left: 4px solid $color-accent;
     font-style: italic;
     color: $color-light;
+    word-wrap: break-word;
   }
 
   p,
